Add GitHub settings instructions
