# packages/server/src/settings/types/settings-github.types.ts
@@ -1,0 +1,9 @@
+export interface SettingsGithubResponse {
+	commitInstruction: string;
+	prInstruction: string;
+}
+
+export interface SettingsGithubUpdateRequest {
+	commitInstruction?: string;
+	prInstruction?: string;
+}
